# airev

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: architecture.md  github-workflow.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
airev_core/: suppression.py
airev_core/arena/: __init__.py  node_types.py  string_table.py  uast_arena.py
airev_core/config/: loader.py  models.py
airev_core/discovery/: ignore.py
airev_core/findings/: collector.py  models.py
airev_core/heuristics/: patterns.py
airev_core/languages/: capabilities.py  registry.py
airev_core/parsers/: __init__.py  python_parser.py  registry.py  typescript_parser.py
airev_core/rules/: base.py  evidence.py  registry.py
airev_core/security/: path_safety.py  scan_policy.py
airev_core/semantics/: builder.py  context.py  resolver.py  stdlib_modules.py  symbols.py
airev_core/workspace/: build_facts.py  models.py
benchmarks/: benchmark_scan.py
interfaces/cli/: main.py
interfaces/github_action/: Dockerfile  README.md  action.yml  entrypoint.py
tests/: conftest.py  test_suppression.py
tests/test_arena/: test_node_types.py  test_string_table.py  test_uast_arena.py
tests/test_cli/: test_formatters.py  test_scan.py
tests/test_config/: test_loader.py
tests/test_discovery/: test_ignore.py
tests/test_edge_cases/: test_config_edges.py  test_ignore_edges.py  test_performance_regression.py  test_safety_edges.py  test_workspace_edges.py
tests/test_findings/: test_collector.py
tests/test_github_action/: test_action.py
tests/test_heuristics/: test_patterns.py
tests/test_languages/: test_capabilities.py
tests/test_parsers/: test_python_parser.py  test_registry.py  test_typescript_parser.py
tests/test_resolver/: test_degradation.py  test_resolver.py
(+56 files in other folders)
